Fixing one z-index bug

--- a/wordpress/wp-content/themes/csiangleur/css/main.css
+++ b/wordpress/wp-content/themes/csiangleur/css/main.css
@@ -1438,7 +1438,7 @@ p {
   background-color: white;
   border: 3px solid #51D2CC;
   border-radius: 5px;
-  z-index: 1; }
+  z-index: 100; }
   .menu__sublist::after {
     border-color: rgba(81, 210, 204, 0);
     border-bottom-color: #51D2CC;
