--- a/www/source/scss/components/_header.scss
+++ b/www/source/scss/components/_header.scss
@@ -54,7 +54,7 @@
     background-color: $white;
     border: 3px solid $BlueGreen;
     border-radius: 5px;
-    z-index: 1;
+    z-index: 100;
     &::after{
       border-color: rgba(81, 210, 204, 0);
 	    border-bottom-color: $BlueGreen;
